--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       html,body{
         font-size: 50px;
         background-color: #F5F5F5;
+        height: 100%;
       }
     </style>
   </head>
