--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       html,body{
         font-size: 50px;
         background-color: #F5F5F5;
+        
+      }
+
+      html{
         height: 100%;
       }
     </style>
